you can see details of a post now :)))