@@ -10,15 +10,18 @@ import javafx.fxml.FXML;
 import javafx.scene.control.TextArea;
 import javafx.scene.control.TextField;
 import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.VBox;
 import javafx.stage.FileChooser;
 import javafx.stage.Popup;
+import javafx.stage.Stage;
 import javafx.util.Duration;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.util.ArrayList;
 
 public class addPost {
@@ -27,25 +30,31 @@ public class addPost {
     public VBox vbox;
     public Post currentPost = new Post();
     public byte[] photo;
+    public ImageView post_image;
     ArrayList<Post> posts = new ArrayList<>();
 
-    @FXML
-    public void initialize(){
-    }
-
     public void add_image(ActionEvent actionEvent) throws IOException {
+        Stage stage = new Stage();
         FileChooser fileChooser = new FileChooser();
-        File file = fileChooser.showOpenDialog(new Popup());
-        FileInputStream fileInputStream = new FileInputStream(file);
-        photo = fileInputStream.readAllBytes();
-        Image image = new Image(new ByteArrayInputStream(photo));
-        currentPost.setImage(photo);
+        fileChooser.setTitle("select profile");
+        fileChooser.getExtensionFilters().addAll(new FileChooser.ExtensionFilter("PNG", "*.png"),
+                new FileChooser.ExtensionFilter("JPG", "*.jpg"));
+        File file = fileChooser.showOpenDialog(stage);
+        Image image = new Image(file.toURI().toString());
+        post_image.setImage(image);
+        byte[] imageToByteArray;
+        imageToByteArray = Files.readAllBytes(file.toPath());
+        photo = imageToByteArray;
+        post_image.setImage(image);
+        if (photo != null)
+            post_image.setImage(new Image(new ByteArrayInputStream(photo)));
     }
 
     public void publish(ActionEvent actionEvent) {
         currentPost.setTitle(post_title.getText());
         currentPost.setDescription(post_description.getText());
         currentPost.setWriter(Main.getUser().getUsername());
+        currentPost.setImage(photo);
         API.addPost(Main.getUser().getUsername() , currentPost);
     }
 
@@ -64,7 +73,7 @@ public class addPost {
     }
 
     public void log_out(MouseEvent mouseEvent) throws IOException {
-        new PageLoader().load("logout");
+        new PageLoader().load("login");
     }
 
     public void search(MouseEvent mouseEvent) throws IOException {
